[workspace]
members = [ "abc331", "abc333", "abc334", "abc337", "abc338", "abc350", "abc351", "abc352", "abc353", "abc354", "abc355", "abc356", "abc357", "abc358", "abc359", "abc360", "abc361", "abc362", "abc363", "abc364", "abc365", "abc366", "abc367", "abc368", "abc369", "abc370", "abc371", "abc372", "abc373", "abc374", "abc375", "abc376", "abc377", "abc378", "abc379", "abc380","abc381", "abc382", "abc383", "atcoder_biginners_selection"]
